Up permgen space during unit tests in an effort to avoid OOMEs in hudson